tdf#162761: fix rounding

Regression after commit a245fd604c11f4bdbd1fdc4dd52e2a7f3880d85b
(tdf#156530: fix OPreparedStatement::setString); when the Any has
a double, its rounding must take its sign into account.

Change-Id: I783454f1fbb1b1775a06d611f212575631fd5e8b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172800
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 58458c6706a2cba6939043f2310c676407233a06)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172812
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>